--- a/pcg_paper.css
+++ b/pcg_paper.css
@@ -19,16 +19,22 @@
    Supporting Files:  
    */
 
+html {
+    background-color: rgb(193, 181, 161);
+    background-image: linear-gradient(rgb(19, 29, 34), rgb(39, 54, 92));
+
+}
 
 body {
-    background-color: rgb(193, 181, 161);
-    font-family: 'Libre Franklin', sans-serif;
+    background-color: rgb(193, 181, 161, );
+    font-family: 'Libre Franklin',
+        sans-serif;
 }
 
 body {
     margin-left: auto;
     margin-right: auto;
-    max-width: 960px;
+    max-width: 1000px;
     min-width: 640px;
     width: 95%;
 }
@@ -63,8 +69,56 @@ nav.horizontal:visited {
 
 nav.horizontal a:hover,
 nav.horizontal:active {
-    background-color: rgb(166, 151, 106);
+    background-color: black;
 }
+
+nav.horizontal li:first-child {
+    margin-left: 2;
+}
+
+nav.horizontal li:last-child {
+    margin-right: 2;
+}
+
+/* .topnavigation {
+    display: grid;
+    grid-template-columns: .6fr .6fr .6fr .6fr .6fr .6fr .6fr .6fr;
+    padding-bottom: 100px;
+}
+
+nav.topnavnavigation li a {
+    display: block;
+    color: whitesmoke;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+nav.topnavnavigation {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+    overflow: hidden;
+    background-color: white;
+
+}
+
+nav.topnavigation li {
+    float: left;
+}
+
+nav.topnavigation a:visited,
+nav.topnavigation a:link {
+    color: black;
+}
+
+nav.topnavigation a:hover,
+nav.topnavigation a:active {
+    background-color: rgb(166, 151, 106);
+} */
+
+
+
 
 #rightcol>nav>h2 {
     color: rgb(34, 43, 66);
@@ -76,16 +130,16 @@ nav.horizontal:active {
 }
 
 #rightcol>nav>ul a:hover {
-    color: rgb(39, 54, 92);
+    color: black;
     font-size: 1.25em;
     text-decoration: none;
 
 }
 
 body>section#rightcol {
-    width: 31.001%;
-    float: left;
-    margin-left: 0%;
+    width: 25%;
+    float: right;
+    margin-left: 20%;
 }
 
 nav ul li {
@@ -100,16 +154,7 @@ nav ul li a {
     text-decoration: none;
 }
 
-div.row {
-    clear: both;
-}
-
-div.row::after {
-    clear: both;
-    content: "";
-    display: table;
-}
-
-div[class^="col-"] {
-    float: left;
+article.leftcol {
+    color: black;
+    padding: 25px;
 }
