--- a/pcg_paper.css
+++ b/pcg_paper.css
@@ -21,12 +21,12 @@
 
 html {
     background-color: rgb(193, 181, 161);
-    background-image: linear-gradient(rgb(19, 29, 34), rgb(39, 54, 92));
+
 
 }
 
 body {
-    background-color: rgb(193, 181, 161, );
+    background-color: rgb(193, 181, 161);
     font-family: 'Libre Franklin',
         sans-serif;
 }
